Making everything display on mobile, alignment fixes

--- a/public/support/home.css
+++ b/public/support/home.css
@@ -1,15 +1,6 @@
 /*
 Copied from persus project
 */
-.math-input-buttons {
-  background-color: rgba(255, 255, 255, 0.7);
-  border-radius: 5px;
-  border: 1px solid #ddd;
-  box-sizing: border-box;
-  margin-top: 5px;
-  padding: 2px;
-  width: 701px;
-}
 .math-input-buttons.absolute {
   left: -2px;
   position: absolute;
@@ -89,6 +80,16 @@ h1 small {
 }
 
 @media (max-width: 950px) {
+
+    .math-input-buttons {
+      background-color: rgba(255, 255, 255, 0.7);
+      border-radius: 5px;
+      border: 1px solid #ddd;
+      box-sizing: border-box;
+      margin-top: 5px;
+      padding: 2px;
+      width: 301px;
+    }
     .homepage-disappear-mobile {
         display:none
     }
@@ -99,17 +100,23 @@ h1 small {
     h2 {
         font-size: 35px
     }
+
     .homepage-center-mobile {
-        text-align: center;
         width: 100%;
-        display: inline-block;
-        float: none;
+        -webkit-box-align: center;
+        align-items: center;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        margin-left: auto;
+        margin-right: auto;
         padding: 0vw 2vw 10vw 2vw;
         /* this is necesary to prevent the padding from adding to thw width */
         -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
         -moz-box-sizing: border-box;    /* Firefox, other Gecko */
         box-sizing: border-box;         /* Opera/IE 8+ */
     }
+
     .homepage-wrapper {
         align-items: center;
         text-align: center;
@@ -130,6 +137,15 @@ h1 small {
 }
 
 @media (min-width: 951px) {
+    .math-input-buttons {
+      background-color: rgba(255, 255, 255, 0.7);
+      border-radius: 5px;
+      border: 1px solid #ddd;
+      box-sizing: border-box;
+      margin-top: 5px;
+      padding: 2px;
+      width: 701px;
+    }
     .homepage-only-on-mobile {
         display:none
     }
